Add  user register and login
