# src/api/routers/user.go
@@ -7,7 +7,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func User(u *gin.RouterGroup, cfg *config.Config) {
-	user := handler.NewUserHandler(cfg)
-	u.POST("/send-otp", middleware.OtpLimiter(cfg), user.SendOtp)
+func User(router *gin.RouterGroup, cfg *config.Config) {
+	h := handler.NewUserHandler(cfg)
+	router.POST("/send-otp", middleware.OtpLimiter(cfg), h.SendOtp)
+	router.POST("/login-by-username", h.LoginByUsername)
+	router.POST("/register-by-username", h.RegisterByUsername)
+	router.POST("/login-by-mobile", h.RegisterLoginByMobileNumber)
 }
